--- a/bomberos-app/src/app/components/modules-overview/modules-overview.scss
+++ b/bomberos-app/src/app/components/modules-overview/modules-overview.scss
@@ -4,6 +4,13 @@
   padding: 2rem 1.5rem 3rem;
 }
 
+.modules-topbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
 .modules-header {
   text-align: center;
   margin-bottom: 2.5rem;
@@ -53,6 +60,10 @@
     display: flex;
     flex-direction: column;
     gap: 0.75rem;
+
+    p {
+      color: rgba(0, 0, 0, 0.7);
+    }
   }
 }
 
@@ -122,4 +133,3 @@
     min-height: 0;
   }
 }
-
