--- a/backend-app/docs/ers/pdf-styles.css
+++ b/backend-app/docs/ers/pdf-styles.css
@@ -35,6 +35,17 @@ table td {
 
 table th {
   background: #f3f4f6;
+  text-align: left;
+}
+
+table td {
+  text-align: justify;
+  vertical-align: top;
+}
+
+table td ul {
+  margin: 0.35rem 0 0.35rem 1rem;
+  padding-left: 1rem;
 }
 
 div {
