--- a/bomberos-app/src/app/components/auth-dashboard/auth-dashboard.html
+++ b/bomberos-app/src/app/components/auth-dashboard/auth-dashboard.html
@@ -21,7 +21,7 @@
 
     <div class="sidebar-footer">
       <p>Necesitas crear credenciales?</p>
-      <button mat-stroked-button color="warn">
+      <button mat-stroked-button color="warn" [routerLink]="'/register'">
         <mat-icon>person_add</mat-icon>
         Registrar usuario
       </button>
