--- a/bomberos-app/src/app/components/login/login.html
+++ b/bomberos-app/src/app/components/login/login.html
@@ -60,6 +60,26 @@
             }
           </button>
 
+          <div class="google-login">
+            <div class="divider"><span>o</span></div>
+            @if (hasGoogleClientId) {
+              <div #googleButton class="google-button" aria-label="Iniciar sesion con Google"></div>
+            } @else {
+              <button type="button" class="google-fallback" disabled>
+                <span class="google-logo" aria-hidden="true">
+                  <svg viewBox="0 0 48 48" role="img">
+                    <path fill="#EA4335" d="M24 9.5c3.54 0 6.23 1.53 7.66 2.82l5.57-5.57C33.76 3.58 29.28 1.5 24 1.5 14.92 1.5 7.05 6.7 3.2 14.23l6.67 5.18C11.63 13.1 17.32 9.5 24 9.5z"/>
+                    <path fill="#4285F4" d="M46.5 24.5c0-1.54-.14-3.02-.4-4.45H24v8.45h12.7c-.55 2.9-2.2 5.36-4.66 7.03l7.13 5.52c4.2-3.88 6.33-9.6 6.33-16.55z"/>
+                    <path fill="#FBBC05" d="M9.87 28.4a14.8 14.8 0 0 1-.76-4.4c0-1.53.27-3.02.76-4.4l-6.67-5.18A23.94 23.94 0 0 0 1.5 24c0 3.86.93 7.5 2.7 10.78l6.67-5.18z"/>
+                    <path fill="#34A853" d="M24 46.5c5.28 0 9.7-1.74 12.93-4.72l-7.13-5.52c-1.98 1.33-4.52 2.11-5.8 2.11-6.68 0-12.37-3.6-14.13-8.91l-6.67 5.18C7.05 41.3 14.92 46.5 24 46.5z"/>
+                    <path fill="none" d="M1.5 1.5h45v45h-45z"/>
+                  </svg>
+                </span>
+                <span>Continuar con Google</span>
+              </button>
+            }
+          </div>
+
           <button type="button" class="register-button" routerLink="/register">
             CREAR CUENTA
           </button>
